--- a/src/app/app.style.css
+++ b/src/app/app.style.css
@@ -1,3 +1,8 @@
+@import url('/assets/css/app.css');
+@import url('/assets/css/demo.css');
+@import url('/assets/css/icomoon.css');
+@import url('/assets/css/master.css');
+
 html, body{
   height: 100%;
   font-family: Arial, Helvetica, sans-serif
